Revert "Ensure text remains visible during webfont load"

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -8,7 +8,6 @@ html {
   font-family: 'Open Sans', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
   background-color: transparent;
-  font-display: swap;
 }
 
 * {
